--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,88 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  background-color: #f8f8f8;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #0d986a;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+}
+.offset::before {
+  display: block;
+  content: "";
+  height: 4rem;
+  margin-top: -4rem;
+}
+
+/*navigation*/
+.navbar {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  background: #65b891 !important;
+  border-bottom: 1px solid #65b891;
+}
+.navbar-brand img {
+  height: 2rem;
+}
+.navbar-brand a {
+  color: #00241b;
+}
+
+.navbar-nav li {
+  padding-right: 0.7rem;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: #00241b;
+  padding-top: 0.8rem;
+}
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #664e4c;
+}
+
+/*home*/
+
+.masthead {
+  background-color: #212529;
+  background: url("leaf4.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.masthead .overlay {
+  position: absolute;
+  background-color: #212529;
+  height: 100%;
+  max-width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.3;
+}
+.masthead h1 {
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 700;
+  padding-top: 15rem;
+  padding-bottom: 0;
+  letter-spacing: 0.3rem;
+  text-shadow: 0.1rem 0.1rem 0.8rem rgb(80, 79, 79);
+}
+.masthead h2 {
+  color: #dce0cd;
+  font-size: 1rem;
+  text-shadow: 0.1rem 0.1rem 0.5rem rgb(80, 79, 79);
+  padding-bottom: 1.6rem;
 }
 
 /* Global button style */
@@ -15,7 +95,8 @@ body {
   outline: none;
   color: #ffffff;
   background-color: rgb(0, 120, 212);
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 2.4rem;
+  margin: 0 0.2rem;
   border-radius: 2px;
   font-size: 1rem;
   min-width: 6rem;
@@ -40,10 +121,21 @@ body {
   align-items: center;
 }
 
-.main .title h3 {
-  font-size: 2.3rem;
-  font-weight: 300;
-  margin: 0.8rem 0;
+.main .title {
+  text-align: center;
+}
+
+.main .title h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 0.8rem 0 0.6rem;
+}
+
+.main .title p {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #ffffff;
+  margin: 0;
 }
 
 .hidden {
@@ -59,13 +151,14 @@ body {
 }
 
 /* Upload box */
+
 .upload-box {
   font-size: 0.8rem;
   color: #666666;
   cursor: pointer;
   width: 16rem;
   height: 10rem;
-  background: #fff;
+  background: #b5ffe1;
   border: 0.1rem dashed #838388;
   border-radius: 0.4rem;
   display: flex;
@@ -77,13 +170,13 @@ body {
 
 .upload-box.dragover {
   /* background-color: grey; */
-  color: #eeeeee;
-  border: 0.1rem solid rgb(0, 120, 212);
-  box-shadow: inset 0 0 0 0.1rem rgb(0, 120, 212);
+  color: #61616b;
+  border: 0.1rem solid #4e878c;
+  box-shadow: inset 0 0 0 0.1rem #4e878c;
 }
 
 .upload-box:hover {
-  border-color: rgb(0, 120, 212);
+  border-color: #4e878c;
 }
 
 .upload-box #image-preview {
