added image and more styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,4 +75,38 @@
     </div>
   </div>
 
+  <section  id ="about" class="offset features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>DATA-1</h3>
+            <p class="lead mb-0">DATA-1-SUB</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>DATA-2</h3>
+            <p class="lead mb-0">DATA-2-SUB</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>DATA-3</h3>
+            <p class="lead mb-0">DATA-3-SUB</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 {% endblock %}
