--- a/static/main.css
+++ b/static/main.css
@@ -256,3 +256,29 @@ h6 {
     transform: rotate(90deg);
   }
 }
+
+.container-fluid {
+  padding: 7% 15%;
+  text-align: center;
+}
+
+#features {
+  position: relative;
+  z-index: 1;
+}
+.feature-title {
+  font-size: 1.5rem;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+.icon {
+  color: #275654;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #00241b;
+}
