--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}" />
+    <script
+      src="https://kit.fontawesome.com/d2443e321b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <!-- GitHub Corner -->
