--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,11 @@
 
   <body data-spy="scroll" data-target="#navbarSupportedContent">
     {% block content %}{% endblock %}
-  </body>
-
-  <footer>
+  
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static',filename='main.js') }}"></script>
-  </footer>
+  </body>
 </html>
