add images to diseases

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,71 +107,61 @@
       <div class="row no-gutters">
         <div
           class="col-lg-6 order-lg-2 text-white showcase-img"
-          style="background-image: url('showcase-1.jpg');"
+          style="background-image: url('brown_spot.jpg');"
         ></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>DATA-1</h2>
-          <p class="lead mb-0">DATA-1</p>
+          <h2>Brown Spot of Paddy</h2>
+          <p class="lead mb-0"><i>Cochliobolus miyabeanus (syn. Bipolaris oryzae, Helminthosporium oryzae)</i></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div
           class="col-lg-6 text-white showcase-img"
-          style="background-image: url('showcase-2.jpg');"
+          style="background-image: url('rice_blast-1500x750.jpg');"
         ></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>DATA-2</h2>
-          <p class="lead mb-0">DATA-2</p>
+          <h2>Rice Blast of Paddy</h2>
+          <p class="lead mb-0"><i>Magnaporthe oryzae (anamorph: Pyricularia oryzae)</i></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div
           class="col-lg-6 order-lg-2 text-white showcase-img"
-          style="background-image: url('showcase-3.jpg');"
+          style="background-image: url('xanthomonas.jpg');"
         ></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>DATA-3</h2>
-          <p class="lead mb-0">DATA-3</p>
+          <h2>Xanthomonas Wilt of Banana</h2>
+          <p class="lead mb-0"><i>(Xanthomonas campestris pv. musacearum)</i></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div
           class="col-lg-6 text-white showcase-img"
-          style="background-image: url('showcase-2.jpg');"
+          style="background-image: url('blacksigatoka.jpg');"
         ></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>DATA-4</h2>
-          <p class="lead mb-0">DATA-4</p>
+          <h2>Black Sigatoka of banana </h2>
+          <p class="lead mb-0"><i>(Mycosphaerella fijiensis)</i></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div
           class="col-lg-6 order-lg-2 text-white showcase-img"
-          style="background-image: url('showcase-1.jpg');"
+          style="background-image: url('mosaic.jpg');"
         ></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>DATA-5</h2>
-          <p class="lead mb-0">DATA-5</p>
+          <h2>Tomato mosaic virus</h2>
+          <p class="lead mb-0"><i>(Tobamovirus)</i></p>
         </div>
       </div>
       <div class="row no-gutters">
         <div
           class="col-lg-6 text-white showcase-img"
-          style="background-image: url('showcase-2.jpg');"
+          style="background-image: url('Tomatoblight.jpeg');"
         ></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>DATA-6</h2>
-          <p class="lead mb-0">DATA-6</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div
-          class="col-lg-6 order-lg-2 text-white showcase-img"
-          style="background-image: url('showcase-3.jpg');"
-        ></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>DATA-7</h2>
-          <p class="lead mb-0">DATA-7</p>
+          <h2>Tomato late blight</h2>
+          <p class="lead mb-0"><i>(Phytophthora infestans)</i></p>
         </div>
       </div>
     </div>
